tests/compile-fail/crates_standard_prelude.rs
// error-pattern: the name `std` is defined multiple times
extern crate std;

fn main() {}
